# examples

./: .env.example  .gitignore  README.md  pyproject.toml
data/paul_graham/dataset/: dataset.jsonl  manifest.yaml
data/paul_graham/documents/208_219_graham_essays/: 208_weird_languages.txt  210_is_there_such_a_thing_as_good_taste.txt  211_putting_ideas_into_words.txt  213_what_ive_learned_from_users.txt  214_alien_truth.txt  219_superlinear_returns.txt
data/uber/vectorstore/june/: docstore.json  index_store.json
data/uber/vectorstore/march/: docstore.json  index_store.json
data/uber/vectorstore/sept/: docstore.json  index_store.json
dataset/uber/: dataset.jsonl  manifest.yaml
examples/: common.py
examples/eval/: __init__.py  dataset.py  manager.py  metrics.py  modules.py  pipeline.py
examples/haystack/simple_rag/: app.py
examples/haystack/utils/: conciseness.py  p2p.py  preprocessor.py
examples/langchain/: retrieval-ce.py  retrieval.py  simple.py
examples/langchain/complex_rag/: app.py  eval.py  pipeline.py
examples/langchain/rag_data/documents/208_219_graham_essays/: 209_beyond_smart.txt  212_heresy.txt  215_what_you_want_to_want.txt  216_the_need_to_read.txt  217_how_to_get_new_ideas.txt  218_how_to_do_great_work.txt
examples/langchain/rag_data/eval_golden_dataset/: dataset.jsonl  manifest.yaml
examples/langchain/simple_rag/: app.py  eval.py  pipeline.py
examples/llama_index/: context-augmentation.py  context_augmentation_pipeline.py  eval-context-augmentation.py  tool-calling.py
examples/llama_index/classification/: app.py  eval.py  pipeline.py
examples/llama_index/classification/data/: dataset.jsonl  manifest.yaml
examples/llama_index/context_augmentation/: app.py  context-augmentation.py  context_augmentation_pipeline.py  eval.py  pipeline.py
examples/llama_index/context_augmentation/data/: dataset.jsonl  manifest.yaml
examples/llama_index/react_agent/: app.py  eval.py  pipeline.py
examples/llama_index/react_agent/data/: dataset.jsonl
examples/llama_index/simple_tools/: app.py  eval.py  pipeline.py
examples/llama_index/simple_tools/data/: dataset.jsonl  manifest.yaml
examples/swarm/customer_support/: _dataset.py  _random_data.py  agents.py  app.py  eval.py  pipeline.py  tools.py
examples/swarm/customer_support/data/: dataset.jsonl  orders.json  products.json
