[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Pasquale Antonante <p.antonante@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"

langchain-community = "^0.0.17"
langchain-openai = "^0.0.5"
langchain-google-genai = "^0.0.6"
langchain = "^0.1.5"

chromadb = "^0.4.22"

relari= {path = "../cli/", develop = true}
continuous-eval = {path = "../continuous-eval"}

unstructured = {extras = ["pdf"], version = "^0.12.3"}
tqdm = "^4.66.1"

llama-index = "^0.10.4"
llama-index-agent-openai-legacy = "^0.1.1"
llama-index-agent-openai = "^0.1.1"
llama-index-llms-openai = "^0.1.1"
loguru = "^0.7.2"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
