[tool.poetry]
name = "examples"
version = "0.3.14"
description = ""
authors = ["Pasquale Antonante <pasquale@relari.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"


chromadb = "^0.4.22"
# continuous-eval = "^0.3.0"
continuous-eval = {path = "../continuous-eval", develop = true}
tqdm = "^4.66.1"
loguru = "^0.7.2"

## Langchain
unstructured = "^0.16.11"
langchain-chroma = "^0.1.4"
llama-index-agent-openai = "^0.4.1"
llama-index-llms-openai = "^0.3.12"
[tool.poetry.group.langchain]
optional = true
[tool.poetry.group.langchain.dependencies]
langchain-community = "^0.3.13"
langchain-openai = "^0.2.14"
langchain-anthropic = "^0.3.1"
langchain-google-genai = "^2.0.7"
langchain-cohere = "^0.3.4"
langchain = "^0.3.13"
cohere = "^5.13.4"
rank-bm25 = "^0.2.2"


## Llama Index
[tool.poetry.group.llama-index]
optional = true
[tool.poetry.group.llama-index.dependencies]
llama-index = "^0.12.8"
llama-index-llms-openai = "^0.3.12"

## Haystack
[tool.poetry.group.haystack]
optional = true
[tool.poetry.group.haystack.dependencies]
haystack-ai = "^2.8.0"
sentence-transformers = ">=2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
